[package]
name = "json2llvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { version = "0.4.0", features = ["llvm17-0","llvm17-0-no-llvm-linking"] }
ast2rust = { path ="../../../ast2rust" }
serde = "1.0.196"
serde_json = "1.0.113"