[package]
name = "json2rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ast2rust = {path ="../../../ast2rust" }
clap = { version = "4.5.0", features = ["derive"] }
serde = "1.0.196"
serde_json = "1.0.113"
