[package]
name = "json2rust"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/on-keyday/brgen"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
ast2rust = {path ="../../../astlib/ast2rust/core" }
ast2rust_macro = {path="../../../astlib/ast2rust/macros"}
clap = { version = "4.5.4", features = ["derive"] }
serde = "1.0.200"
serde_json = "1.0.116"
wasm-bindgen = "0.2.92"

