[package]
name = "unictest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
ast2rust = {path ="../../../astlib/ast2rust/core" }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version="1.0.200" ,features = ["derive"]}
serde_json = "1.0.116"
uuid = {version = "1.18.1", features=["v4"]}
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.31"
colored = "3.0.0"
