#license
cmake_minimum_required(VERSION 3.25)
project(bm2hexmap)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/tool)
add_executable(bm2hexmap main.cpp bm2hexmap.cpp)
target_include_directories(bm2hexmap PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/..")
target_link_libraries(bm2hexmap futils bm)
install(TARGETS bm2hexmap DESTINATION tool)
if ("$ENV{BUILD_MODE}" STREQUAL "web")
  install(FILES "${CMAKE_BINARY_DIR}/tool/bm2hexmap.wasm" DESTINATION tool)
endif()
